--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.19.4
 	powerbroker2/ELMDuino@^3.0.2
+	plerup/EspSoftwareSerial@^6.16.1
