--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	powerbroker2/ELMDuino@^3.0.2
 	plerup/EspSoftwareSerial@^6.16.1
+	mikalhart/TinyGPSPlus@^1.0.3
