--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
 	powerbroker2/ELMDuino@^3.0.2
 	plerup/EspSoftwareSerial@^6.16.1
 	mikalhart/TinyGPSPlus@^1.0.3
+	arduino-libraries/ArduinoHttpClient@^0.4.0
+	bakercp/CRC32@^2.0.0
